# src/Api/Users/v1/GetUserById/GetUserByIdRequest.cs
@@ -1,0 +1,9 @@
+using FastEndpoints;
+using Microsoft.AspNetCore.Mvc;
+
+namespace Api.Users.v1.GetUserById;
+
+public class GetUserByIdRequest
+{
+ [FromRoute]   public Guid Id { get; set; }
+}
